# renamr

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  PROJECT.md  README.md  cliff.toml  config.toml.example  noxfile.py  pyproject.toml
.github/workflows/: ci.yml  release.yml
.opencode/: LESSONS.md
.opencode/commands/: oss-setup.md  python-init.md  release.md
.opencode/skills/git-release/: SKILL.md
.opencode/skills/python-oss-setup/: SKILL.md
.opencode/skills/python-setup/: SKILL.md
src/file_renamer/: __init__.py  __main__.py  cli.py  config.py  models.py
src/renamr/: __init__.py  __main__.py  cli.py  config.toml.example  files.py  logging.py  metadata.py  models.py  preview.py  renamer.py
tests/: __init__.py
tests/integration/: test_package.py
tests/unit/: test_cli.py  test_files.py  test_metadata.py  test_models.py  test_preview.py  test_renamer.py
